--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "react-scripts": "^3.3.0",
-    "react-test-renderer": "^16.0.0",
-    "webpack": "^4.41.2",
-    "webpack-dev-server": "^3.9.0"
+    "react-test-renderer": "^16.0.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
